--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -7622,14 +7622,14 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td>Booleano</td>
       <td>—</td>
       <td>Não</td>
-      <td>Quando true, a autorização deve ser com captura automática quando o risco de fraude for considerado baixo (Accept). Em casos de Reject ou Review, o fluxo permanece o mesmo, ou seja, a captura acontecerá conforme o valor especificado no parâmetro “Capture”. Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente “AuthorizeFirst”. Por depender do resutlado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado.</td>
+      <td>Quando true, a autorização deve ser com captura automática quando o risco de fraude for considerado baixo (Accept). Em casos de Reject ou Review, o fluxo permanece o mesmo, ou seja, a captura acontecerá conforme o valor especificado no parâmetro “Capture”. Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente “AuthorizeFirst”. Por depender do resultado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.VoidOnHighRisk</code></td>
       <td>Booleano</td>
       <td>—</td>
       <td>Não</td>
-      <td>Quando true, o estorno deve acontecer automaticamente quando o risco de fraude for considerado alto (Reject). Em casos de Accept ou Review, o fluxo permanece o mesmo, ou seja, o estorno deve ser feito manualmente. Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente “AuthorizeFirst”. Por depender do resutlado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado.</td>
+      <td>Quando true, o estorno deve acontecer automaticamente quando o risco de fraude for considerado alto (Reject). Em casos de Accept ou Review, o fluxo permanece o mesmo, ou seja, o estorno deve ser feito manualmente. Para a utilização deste parâmetro, a sequência do fluxo de análise de risco deve ser obrigatoriamente “AuthorizeFirst”. Por depender do resultado de análise de risco, este parâmetro só terá efeito quando o serviço de Antifraude for contratado.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.TotalOrderAmount</code></td>
