--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7636,7 +7636,7 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>Text</td>
       <td>—</td>
       <td>No</td>
-      <td>Level of importance of e-mail and IP addresses of clients at risk of scoring.<br /> <em>“Low”</em> (Low importance of e-mail and IP address in risk analysis) importance of e-mail and IP address in risk analysis) <em>“High”</em> (High importance of e-mail and IP address in risk analysis) <em>“Off”</em> (Email and address IP Does Not Affect Risk Analysis)</td>
+      <td>Level of importance of the e-mail and IP addresses of the clients at risk of scoring. <br /> <em>“Low”</em> (Low importance of e-mail and IP address in risk analysis) <br /> <em>“Normal”</em> (Average importance of the e-mail and IP address in risk analysis) <br /> <em>“High”</em> (High importance of the email and IP address in risk analysis) <br /><em>“Off”</em>(Email and IP address do not affect the risk analysis)</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Cart.Items.NonSensicalHedge</code></td>
@@ -7657,7 +7657,7 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>Text</td>
       <td>6</td>
       <td>No</td>
-      <td>Nível dos testes realizados com os Numbers de telefones.<br /><em>“Low”</em>(Baixa importância nos testes realizados com Numbers de telefone)<br /><em>“Normal”</em>(Média importância nos testes realizados com Numbers de telefone)<br /><em>“High”</em>(Alta importância nos testes realizados com Numbers de telefone)<br /><em>“Off”</em>(Testes de Numbers de telefone No afetam a análise de risco)</td>
+      <td>Level of tests performed on phone numbers. <br /><em>“Low”</em> (Low importance on the tests performed with phone numbers) <br /> <em>“Normal”</em> (Average importance on tests performed with telephone numbers) <br /> <em>“High”</em> (High importance on the tests performed with phone numbers) <br /> <em>“Off”</em> (Phone numbers tests do not affect risk analysis)</td>
     </tr>
   </tbody>
 </table>
