[2aeb2844876f722e955c74a0e3876975fbbf0a0a]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7741,7 +7741,7 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>Text</td>
       <td>-</td>
       <td>No</td>
-      <td>Passenger’s classification. <br />Field Values: “Adult” (Adult passenger) <br />“Child” (Child passenger) <br /> “Infant” (Child Passenger) <br />“Youth” (Teenage passenger) “Student” (Student passenger) <br />“SeniorCitizen” (Old passenger) <br />“Military” (Military passenger)</td>
+      <td>Passenger’s classification. <br />Field Values: “Adult” (Adult passenger) <br />“Child” (Child passenger) <br /> “Infant” (Child Passenger) <br />“Youth” (Teenage passenger) <br />“Student” (Student passenger) <br />“SeniorCitizen” (Old passenger) <br />“Military” (Military passenger)</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Cart.Items.Passenger.Phone</code></td>
