--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7757,6 +7757,111 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>No</td>
       <td>Airline classification. You can use values ​​such as Gold or Platinum.</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.MerchantDefinedFields.Id</code></td>
+      <td>Text</td>
+      <td>—</td>
+      <td>Yes (if applicable)</td>
+      <td>Id of the additional information to send.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.MerchantDefinedFields.Value</code></td>
+      <td>Text</td>
+      <td>255</td>
+      <td>Yes (if applicable)</td>
+      <td>Value of the additional information to send.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Shipping.Addressee</code></td>
+      <td>Text</td>
+      <td>255</td>
+      <td>No</td>
+      <td>Delivery recipient name</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Shipping.Method</code></td>
+      <td>Text</td>
+      <td>-</td>
+      <td>No</td>
+      <td>Type of product delivery service. <br />“SameDay” (Same day delivery service) <br /> “OneDay” (Night or next day delivery service) <br />“TwoDay” (Two-Day Delivery Service) <br />“ThreeDay” (Three delivery service)<br /> “LowCost” (Low cost delivery service) <br />“Pickup” (Product withdrawn from the store) <br /> “Other” (Other delivery method) <br /> “None” (No delivery service, as it is a service or subscription)</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Shipping.Phone</code></td>
+      <td>Text</td>
+      <td>15</td>
+      <td>No</td>
+      <td>Phone number of the delivery recipient. Ex. 552133665599 (Country Code 55, City Code 21, Phone 33665599)</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.JourneyType</code></td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Trip type</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.DepartureTime</code></td>
+      <td>DateTime</td>
+      <td>23</td>
+      <td>No</td>
+      <td>Date, hour and minute of flight departure. Ex: “2018-01-09 18:00:00”</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.Name</code></td>
+      <td>Text</td>
+      <td>120</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Passenger’s name.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.Identity</code></td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>RG, CPF or CNPJ of the passenger.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.Status</code></td>
+      <td>Text</td>
+      <td>32</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Airline Classification. Field values: “Gold”, “Platinum”.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.Rating</code></td>
+      <td>Text</td>
+      <td>15</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Passenger’s classification. <br />Field Values: “Adult” (Adult passenger) <br />“Child” (Child passenger) <br /> “Infant” (Child Passenger) <br />“Youth” (Teenage passenger) “Student” (Student passenger) <br />“SeniorCitizen” (Old passenger) <br />“Military” (Military passenger)</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.Email</code></td>
+      <td>Text</td>
+      <td>255</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Passenger’s e-mail.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.Phone</code></td>
+      <td>Text</td>
+      <td>15</td>
+      <td>No</td>
+      <td>Passenger phone number. For orders outside the U.S., CyberSource recommends that you include the country code. 552133665599 (Ex. Country Code 55, City Code 21, Phone 33665599)</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.TravelLegs.Origin</code></td>
+      <td>Text</td>
+      <td>3</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Departure airport code.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">FraudAnalysis.Travel.Passengers.TravelLegs.Destination</code></td>
+      <td>Text</td>
+      <td>3</td>
+      <td>Yes, if the Travel node is sent.</td>
+      <td>Arrival airport code.</td>
+    </tr>
   </tbody>
 </table>
 
