[c6aab38ce159a9fc5d53fc18d455bd6788d2cf88]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -8872,7 +8872,15 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h3 id="what-is-dfingerprint">What is D.FingerPrint</h3>
 
+<p>The Device FingerPrint is a javascript that once installed at the store checkout captures browsing data and information about the equipment used in the purchase. This information is used by AF to identify buyer non-standard purchases.</p>
+
 <h3 id="configuring-fingerprint">Configuring FingerPrint</h3>
+
+<p>It will be necessary to add two tags, the <em>script</em> inside the <em>head</em> tag for a correct performance and the <em>noscript</em> inside the <em>body</em> tag, so that the data collection of the device is performed even if the Javascript of the browser is disabled.</p>
+
+<blockquote>
+  <p><strong>IMPORTANT:</strong> SIf the 2 code segments are not placed on the checkout page, the results may not be accurate.</p>
+</blockquote>
 
 <h4 id="domain">Domain</h4>
 
