[209e2b88e63d6931ac98624c847da014b587ca8c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -8879,7 +8879,7 @@ It is possible to carry out both the total cancellation and the partial cancella
 <p>It will be necessary to add two tags, the <em>script</em> inside the <em>head</em> tag for a correct performance and the <em>noscript</em> inside the <em>body</em> tag, so that the data collection of the device is performed even if the Javascript of the browser is disabled.</p>
 
 <blockquote>
-  <p><strong>IMPORTANT:</strong> SIf the 2 code segments are not placed on the checkout page, the results may not be accurate.</p>
+  <p><strong>IMPORTANT:</strong> If the 2 code segments are not placed on the checkout page, the results may not be accurate.</p>
 </blockquote>
 
 <h4 id="domain">Domain</h4>
