[06a8db3e7e49ec2b413724ca3e816cb41caa5078]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -9014,10 +9014,10 @@ JavaScript</p>
 
 <h4 id="configurando-seu-servidor-web">Configurando seu Servidor Web</h4>
 
-<p>Todos os objetos se referem a h.online-metrix.net, que é o DNS do servidor de fingerprint. Quando você estiver pronto para produção, você deve alterar o nome do servidor para uma URL local, e configurar no seu servidor Web um redirecionamento de URL para h.online-metrix.net.</p>
+<p>All objects refer to h.online-metrix.net,which is the DNS of the fingerprint server. When you are ready for production, you must change the server name to a local URL, and configure a URL redirection on your web server to h.online-metrix.net.</p>
 
 <blockquote>
-  <p><strong>IMPORTANTE:</strong> Se você não completar essa seção, você não receberá resultados corretos, e o domínio (URL) do fornecedor de fingerprint ficará visível, sendo mais provável que seu consumidor o bloqueie.</p>
+  <p><strong>IMPORTANT:</strong> If you do not complete this section, you will not receive correct results, and the fingerprint provider’s domain (URL) will be visible, and your consumer is more likely to block it.</p>
 </blockquote>
 
 <h1 id="velocity">Velocity</h1>
