[91eafeb95b2aef23afd97e38dd6e5cd344590a9c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -8948,6 +8948,12 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h4 id="configuring-your-web-server">Configuring your Web Server</h4>
 
+<p>All objects refer to h.online-metrix.net,which is the DNS of the fingerprint server. When you are ready for production, you must change the server name to a local URL, and configure a URL redirection on your web server to h.online-metrix.net.</p>
+
+<blockquote>
+  <p><strong>IMPORTANT:</strong> If you do not complete this section, you will not receive correct results, and the fingerprint provider’s domain (URL) will be visible, and your consumer is more likely to block it.</p>
+</blockquote>
+
 <h1 id="velocity">Velocity</h1>
 
 <h2 id="what-is-velocity">What is Velocity</h2>
