[0d1f70736155649b38a60418bcc73ac2d01866e4]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -9229,7 +9229,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<p>Onde podemos definir os dados como:</p>
+<p>Where can we define the data as:</p>
 
 <table>
   <thead>
