[a7e9621036432919da1595bed432f1fcaa45bb8d]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -11987,6 +11987,53 @@ That way, when a transaction with recurrent markup is submitted to the API and C
   </tbody>
 </table>
 
+<h3 id="card-brands-and-issuers-enabled">Card Brands and Issuers Enabled</h3>
+
+<p>Card Brands and Issuers that are already with Renew easy enabled:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Issuers</th>
+      <th>VISA</th>
+      <th>MASTER</th>
+      <th>ELO</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">BRADESCO</code></td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td>Yes</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">BANCO DO BRASIL</code></td>
+      <td>Yes</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">SANTADER</code></td>
+      <td>Yes</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">CITI</code></td>
+      <td>Yes</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">BANCO PAN</code></td>
+      <td>Yes</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+  </tbody>
+</table>
+
 <h1 id="tokenization-of-cards">Tokenization of cards</h1>
 
 <h2 id="what-is-tokenization-of-cards">What is Tokenization of Cards:</h2>
